Fix flicker on open

--- a/src/manager/manager.css
+++ b/src/manager/manager.css
@@ -200,11 +200,15 @@ body {
 
 /* ---------------------------- MAIN ---------------------------- */
 
+.tab-contents {
+	overflow: hidden;
+	height: 100%;
+	background-color: var(--color-bg-medium);
+}
+
 .tab-content {
 	display: none;
-	height: 100%;
 	overflow: hidden;
-	background: var(--color-bg-light);
 }
 
 .resizer {
@@ -1243,7 +1247,7 @@ input[type="checkbox"]:checked::before {
 	overflow-y: auto;
 	padding: 0.6rem 0.6rem;
 	color: var(--color-text-primary);
-	width: 20rem;
+	width: 15rem;
 	height: 100%;
 	min-width: 5rem;
 	background-color: var(--color-bg-dark);
@@ -1284,8 +1288,8 @@ input[type="checkbox"]:checked::before {
 	background: var(--color-bg-light);
 	display: flex;
 	flex-direction: column;
-	width: fit-content;
-	min-width: 40rem;
+	width: 45rem;
+	min-width: 20rem;
 	height: 100%;
 }
 
